@@ -1,3 +1,8 @@
+2019-01-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Default context popup menu in input fields, with Copy/Cut/Paste
+	menu options.
+
 2019-01-15  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* includes/x/w/impl/focus/focusable_element.H (process_button_event):
